// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ebay-fake-menu-button rendering renders borderless story correctly 1`] = `
<svg
  aria-hidden="true"
  class="icon icon--12"
  focusable="false"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-chevron-down-12"
  />
</svg>
`;

exports[`ebay-fake-menu-button rendering renders default story correctly 1`] = `
<svg
  aria-hidden="true"
  class="icon icon--12"
  focusable="false"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-chevron-down-12"
  />
</svg>
`;

exports[`ebay-fake-menu-button rendering renders disabled story correctly 1`] = `
<svg
  aria-hidden="true"
  class="icon icon--12"
  focusable="false"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-chevron-down-12"
  />
</svg>
`;

exports[`ebay-fake-menu-button rendering renders expanded story correctly 1`] = `
<svg
  aria-hidden="true"
  class="icon icon--16"
  focusable="false"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-tick-16"
  />
</svg>
`;

exports[`ebay-fake-menu-button rendering renders variants story correctly 1`] = `
<svg
  aria-hidden="true"
  class="icon icon--24"
  focusable="false"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-overflow-horizontal-24"
  />
</svg>
`;

exports[`ebay-fake-menu-button rendering renders with icon story correctly 1`] = `
<svg
  aria-hidden="true"
  class="icon icon--16"
  focusable="false"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-settings-16"
  />
</svg>
`;
